# framework.appfw.ail

./: CMakeLists.txt  ail-mobile.manifest  ail.manifest  project.config
TC/unit/: utc_ApplicationFW_ail_appinfo_get_bool_func.c  utc_ApplicationFW_ail_appinfo_get_int_func.c  utc_ApplicationFW_ail_appinfo_get_str_func.c  utc_ApplicationFW_ail_desktop_add_func.c  utc_ApplicationFW_ail_desktop_remove_func.c  utc_ApplicationFW_ail_desktop_update_func.c  utc_ApplicationFW_ail_filter_add_bool_func.c  utc_ApplicationFW_ail_filter_add_int_func.c  utc_ApplicationFW_ail_filter_add_str_func.c  utc_ApplicationFW_ail_filter_count_appinfo_func.c  utc_ApplicationFW_ail_filter_destroy_func.c  utc_ApplicationFW_ail_filter_list_appinfo_foreach_func.c  utc_ApplicationFW_ail_filter_new_func.c  utc_ApplicationFW_ail_package_destroy_appinfo_func.c  utc_ApplicationFW_ail_package_get_appinfo_func.c
include/: ail.h
packaging/: ail.spec
src/: ail_convert.c  ail_db.c  ail_db.h  ail_desktop.c  ail_filter.c  ail_package.c  ail_private.h  ail_sql.c  ail_sql.h
test/: CMakeLists.txt
test/src/: ail_test.c
tool/: CMakeLists.txt
tool/src/: ail_desktop.c  ail_filter.c  ail_package.c  initdb.c
