#AIL init DB build script

SET(AILTEST ail_test)
SET(SRCS src/ail_test.c)

pkg_check_modules(AILTEST_PKGS REQUIRED vconf dlog db-util sqlite3)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)

STRING(REPLACE ";" " " EXTRA_CFLAGS "${AILTEST_PKGS_CFLAGS}")

ADD_EXECUTABLE(${AILTEST} ${SRCS})
TARGET_LINK_LIBRARIES(${AILTEST} ${LIBNAME} ${AILTEST_PKGS_LIBRARIES})
SET_TARGET_PROPERTIES(${AILTEST} PROPERTIES COMPILE_FLAGS "${EXTRA_CFLAGS}")
SET_TARGET_PROPERTIES(${AILTEST} PROPERTIES SKIP_BUILD_RPATH true)

INSTALL(TARGETS ${AILTEST} DESTINATION ${BINDIR})
